--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,10 +2,10 @@
 @import "rouge-github";
 
 body {
-  background-color: #fff;
+  background-color: #0d1117;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
+  color:#e2e9ef;
   font-weight:400;
 }
 
