--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: #0d1117;
+  background-color: #383A3E;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#e2e9ef;
