--- a/_sass/rouge-github.scss
+++ b/_sass/rouge-github.scss
@@ -59,31 +59,31 @@
   color: #aa0000;
 }
 .highlight .kc {
-  color: #000000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .kd {
-  color: #000000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .kn {
-  color: #000000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .kp {
-  color: #000000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .kr {
-  color: #000000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .kt {
-  color: #445588;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .k, .highlight .kv {
-  color: #000000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .mf {
@@ -150,29 +150,29 @@
   color: #0086B3;
 }
 .highlight .nc {
-  color: #445588;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .no {
-  color: #008080;
+  color: #e2e9ef;
 }
 .highlight .nd {
-  color: #3c5d5d;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .ni {
   color: #800080;
 }
 .highlight .ne {
-  color: #990000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .nf {
-  color: #990000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .nl {
-  color: #990000;
+  color: #e2e9ef;
   font-weight: bold;
 }
 .highlight .nn {
