--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6 {
   margin:0 0 20px;
 }
 
+b, strong {
+   color:#e2e9ef;
+   }
+
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
 }
